--- a/my_site/blog/templates/blog/index.html
+++ b/my_site/blog/templates/blog/index.html
@@ -1,9 +1,42 @@
-{% extends 'base.html' %}
-
-{% block title %}
-    My Blog
-{% endblock  %}
-
+{% extends "base.html" %}
+{% block title %}My Blog{% endblock title %}
 {% block content %}
-    <h1>Welcome to my blog</h1>
-{% endblock  %}
+    <header>
+        <a href="">Suresh' Blog</a>
+        <nav>
+            <a href="">All Posts</a>
+        </nav>
+    </header>
+    <section>
+        <header>
+            <img src="" alt="">
+            <h2>Suresh' Blog</h2>
+        </header>
+        <p>Hi, I am Suresh and I love to blog About Python</p>
+        <section>
+            <h1>My latest Python Updates</h1>
+            <ul>
+                <li>
+                    <article>
+                        <a href="">
+                            <img src="" alt="">
+                            <div>
+                                <h3>post title</h3>
+                                <p>post content</p>
+                            </div>
+                        </a>
+                    </article>
+                </li>
+            </ul>
+        </section>
+    </section>
+    <section>
+        <h2>What I do</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+    </section>
+{% endblock content %}
