--- a/my_site/templates/base.html
+++ b/my_site/templates/base.html
@@ -14,6 +14,12 @@
         {% endblock css_files %}
     </head>
     <body>
+        <header>
+            <a href="">Suresh' Blog</a>
+            <nav>
+                <a href="">All Posts</a>
+            </nav>
+        </header>
         {% block content %}
         {% endblock content %}
     </body>
