include single post block in index and post lists page

--- a/my_site/blog/templates/blog/index.html
+++ b/my_site/blog/templates/blog/index.html
@@ -17,17 +17,7 @@
         <section>
             <h1>My latest Python Updates</h1>
             <ul>
-                <li>
-                    <article>
-                        <a href="">
-                            <img src="" alt="">
-                            <div>
-                                <h3>post title</h3>
-                                <p>post content</p>
-                            </div>
-                        </a>
-                    </article>
-                </li>
+                {% include "blog/includes/post.html" %}
             </ul>
         </section>
     </section>
