--- a/my_site/blog/templates/blog/includes/post.html
+++ b/my_site/blog/templates/blog/includes/post.html
@@ -1,7 +1,7 @@
 {% load static %}
 <li>
     <article>
-        <a href="">
+        <a href="{% url 'post-details-page' 'some-post' %}">
             <img src="" alt="">
             <div>
                 <h3>post title</h3>
