--- a/my_site/blog/templates/blog/index.html
+++ b/my_site/blog/templates/blog/index.html
@@ -17,7 +17,9 @@
         <section>
             <h1>My latest Python Updates</h1>
             <ul>
-                {% include "blog/includes/post.html" %}
+                {% for post in posts %}
+                    {% include "blog/includes/post.html" %}
+                {% endfor %}
             </ul>
         </section>
     </section>
