--- a/my_site/blog/templates/blog/posts.html
+++ b/my_site/blog/templates/blog/posts.html
@@ -10,10 +10,9 @@
 <section>
     <h2>My Collected Posts</h2>
     <ul>
-        {% include "blog/includes/post.html" %}
-        {% include "blog/includes/post.html" %}
-        {% include "blog/includes/post.html" %}
-        {% include "blog/includes/post.html" %}
+        {% for post in posts %}
+            {% include "blog/includes/post.html" %}
+        {% endfor %}
     </ul>
 </section>
 {% endblock content %}
