--- a/my_site/blog/templates/blog/post-details.html
+++ b/my_site/blog/templates/blog/post-details.html
@@ -8,24 +8,16 @@
 {% endblock css_files %}
 {% block content %}
     <section>
-        <h2>Post Title</h2>
+        <h2>{{ post.title }}</h2>
         <article>
-            <img src="" alt="">
-            <address>By Suresh</address>
+            <img src="{% static 'blog/images/'|add:post.image_name %}" alt="" width="750px" height="auto"/>
+            <address>By {{ post.author }}</address>
             <div>
-                last updated on  <time>july 10th</time>
+                last updated on  <time>{{ post.date|date:"d M y" }}</time>
             </div>
         </article>
     </section>
     <main>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam voluptatem cupiditate adipisci doloribus nesciunt necessitatibus, exercitationem asperiores consectetur dignissimos itaque ad modi placeat impedit reiciendis at nam cumque vitae. Nisi!
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam voluptatem cupiditate adipisci doloribus nesciunt necessitatibus, exercitationem asperiores consectetur dignissimos itaque ad modi placeat impedit reiciendis at nam cumque vitae. Nisi!
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam voluptatem cupiditate adipisci doloribus nesciunt necessitatibus, exercitationem asperiores consectetur dignissimos itaque ad modi placeat impedit reiciendis at nam cumque vitae. Nisi!
-        </p>
+        {{ post.content|linebreaks }}
     </main>
 {% endblock content %}
