--- a/my_site/blog/templates/blog/post-details.html
+++ b/my_site/blog/templates/blog/post-details.html
@@ -11,7 +11,7 @@
         <h2>{{ post.title }}</h2>
         <article>
             <img src="{% static 'blog/images/'|add:post.image_name %}" alt="" width="750px" height="auto"/>
-            <address>By {{ post.author }}</address>
+            <address>By <a href="mailto:{{ post.author.email }}">{{ post.author }}</a> </address>
             <div>
                 last updated on  <time>{{ post.date|date:"d M y" }}</time>
             </div>
