--- a/my_site/blog/templates/blog/post-details.html
+++ b/my_site/blog/templates/blog/post-details.html
@@ -9,6 +9,13 @@
 {% block content %}
     <section>
         <h2>{{ post.title }}</h2>
+        <div>
+            {% for tag in tags %}
+                <span>
+                   {{ tag.caption }}     
+                </span>
+            {% endfor %}
+        </div>
         <article>
             <img src="{% static 'blog/images/'|add:post.image_name %}" alt="" width="750px" height="auto"/>
             <address>By <a href="mailto:{{ post.author.email }}">{{ post.author }}</a> </address>
