--- a/my_site/blog/templates/blog/index.html
+++ b/my_site/blog/templates/blog/index.html
@@ -1,13 +1,12 @@
 {% extends "base.html" %}
 {% load static %}
-{% block title %}My Blog{% endblock title %}
-
+{% block title %}
+    My Blog
+{% endblock title %}
 {% block css_files %}
-<link rel="stylesheet" href="{% static 'blog/index.css' %}"/>
+    <link rel="stylesheet" href="{% static 'blog/index.css' %}"/>
 {% endblock css_files %}
-
 {% block content %}
-    
     <section>
         <header>
             <img src="{% static 'blog/images/face.jpg' %}" alt="" width="250px">
