--- a/my_site/blog/templates/blog/post-details.html
+++ b/my_site/blog/templates/blog/post-details.html
@@ -13,7 +13,7 @@
             {% for tag in tags %}<span>{{ tag.caption }}</span>{% endfor %}
         </div>
         <article>
-            <img src="{% static 'blog/images/'|add:post.image_name %}"
+            <img src="{{ post.image.url }}"
                  alt=""
                  width="750px"
                  height="auto"/>
