--- a/my_site/blog/templates/blog/post-details.html
+++ b/my_site/blog/templates/blog/post-details.html
@@ -26,6 +26,16 @@
     <main>
         {{ post.content|linebreaks }}
     </main>
+    <section id="comments">
+        <ul>
+            {% for comment in comments %}
+            <li>
+                <h2>{{ comment.user_name }}</h2>
+                <p>{{ comment.text|linebreaks }}</p>
+            </li>
+            {% endfor %}
+        </ul>
+    </section>
     <div>
         <form action="{% url 'post-details-page' post.slug %}" method="post">
             {% csrf_token %}
