--- a/my_site/templates/base.html
+++ b/my_site/templates/base.html
@@ -18,6 +18,7 @@
             <a href="{% url 'home-page' %}">Suresh' Blog</a>
             <nav>
                 <a href="{% url 'posts-page' %}">All Posts</a>
+                <a href="{% url 'read-later' %}">Stored Posts</a>
             </nav>
         </header>
         {% block content %}
