--- a/my_site/blog/templates/blog/post-details.html
+++ b/my_site/blog/templates/blog/post-details.html
@@ -16,7 +16,15 @@
             <form action="{% url 'read-later' %}" method="post">
                 {% csrf_token %}
                 <input type="hidden" name="post_id" value="{{ post.id }}"/>
-                <button type="submit">Read Later</button>
+                <button type="submit">
+                    {% if saved_for_later %}
+                        remove from "Read Later" List
+                    {% else %}
+                        Read Later
+                    {% endif %}
+                    
+
+                </button>
             </form>
         </div>
         <article>
