--- a/my_site/blog/templates/blog/post-details.html
+++ b/my_site/blog/templates/blog/post-details.html
@@ -9,32 +9,33 @@
 {% block content %}
     <section>
         <h2>{{ post.title }}</h2>
-        <div>
-            {% for tag in tags %}<span>{{ tag.caption }}</span>{% endfor %}
-        </div>
-        <div>
-            <form action="{% url 'read-later' %}" method="post">
-                {% csrf_token %}
-                <input type="hidden" name="post_id" value="{{ post.id }}"/>
-                <button type="submit">
-                    {% if saved_for_later %}
-                        remove from "Read Later" List
-                    {% else %}
-                        Read Later
-                    {% endif %}
-                    
-
-                </button>
-            </form>
-        </div>
         <article>
             <img src="{{ post.image.url }}"
                  alt=""
                  width="750px"
                  height="auto"/>
-            <address>By <a href="mailto:{{ post.author.email }}">{{ post.author }}</a> </address>
+            <div class="row">
+                <div class="col-md-3"><address>By <a href="mailto:{{ post.author.email }}">{{ post.author }}</a> </address></div>
+                <div class="col-md-6">last updated on  <time>{{ post.date|date:"d M y" }}</time></div>
+                <div class="col-md-3">
+                    {% for tag in tags %}
+                    <span class="alert alert-success">{{ tag.caption }}</span>
+                    {% endfor %}
+                </div>
+            </div>
+            
             <div>
-                last updated on  <time>{{ post.date|date:"d M y" }}</time>
+                <form action="{% url 'read-later' %}" method="post">
+                    {% csrf_token %}
+                    <input type="hidden" name="post_id" value="{{ post.id }}"/>
+                    <button class="btn btn-success" type="submit">
+                        {% if saved_for_later %}
+                            remove from "Read Later" List
+                        {% else %}
+                            Read Later
+                        {% endif %}
+                    </button>
+                </form>
             </div>
         </article>
     </section>
@@ -42,26 +43,30 @@
         {{ post.content|linebreaks }}
     </main>
     <section id="comments">
+        <h2>Comments</h2>
         <ul>
             {% for comment in comments %}
-            <li>
-                <h2>{{ comment.user_name }}</h2>
+            <li class="border border-primary">
+                <h3>{{ comment.user_name }}</h3>
                 <p>{{ comment.text|linebreaks }}</p>
             </li>
             {% endfor %}
         </ul>
     </section>
     <div>
+        <h2>Submin Your Comment</h2>
         <form action="{% url 'post-details-page' post.slug %}" method="post">
             {% csrf_token %}
             {% for field in comment_form %}
-            <div class="form-control {% if form_field.errors %}invalid{% endif %}">
+            <div class="form-group {% if form_field.errors %}invalid{% endif %}">
                 {{ field.label_tag }}
                 {{ field }}
                 {{ field.error }}
             </div>
             {% endfor %}
-            <button type="submit">Comment</button>
+            <div class="mt-3 mb-2">
+                <button class="btn btn-primary " type="submit">Comment</button>
+            </div>
         </form>
     </div>
 {% endblock content %}
