desing stored posts page

--- a/my_site/blog/templates/blog/stored-posts.html
+++ b/my_site/blog/templates/blog/stored-posts.html
@@ -8,6 +8,7 @@
 {% endblock css_files %}
 {% block content %}
     <section name="" id="">
+        <h2>Your saved posts</h2>
         {% if not has_posts %}
             <p>You didn't save any posts for later.</p>
         {% else %}
